# python-immutable-fs-trees

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: pyci.yml
.vim/: coc-settings.json
src/hexlet/fs/: __init__.py
test/: test_fs.py
