[project]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
name = "hexlet-immutable-fs-trees"
version = "0.1.7"
description = "File System Tree"
authors = [{name = "Hexlet Team", email = "info@hexlet.io"}]
license = "ISC"
homepage = "https://github.com/hexlet-components/python-immutable-fs-trees"
repository = "https://github.com/hexlet-components/python-immutable-fs-trees"
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3.6",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hexlet"]
